fix(rent-service): fix RentEntityMapper